deployment/system/traefik/dashboard-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
  namespace: kube-system
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`cluster.k8slocal.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    middlewares:
    - name: https-redirect-scheme
      namespace: kube-system
    services:
    - name: api@internal
      kind: TraefikService
